# Atlas

./: .gitignore  CLAUDE.md  README.md  TODO.md  build.sh  毕业设计-项目描述.md
.claude/: settings.local.json
backend/: atlas-backend.spec  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  chat.py  documents.py  history.py  knowledge_bases.py  settings.py
backend/app/core/: __init__.py  chunker.py  ollama.py  parser.py  rag.py  vectorstore.py
backend/app/db/: __init__.py  crud.py  database.py
backend/app/models/: __init__.py  models.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/main/: index.js
frontend/src/preload/: preload.js
frontend/src/renderer/: App.tsx
frontend/src/renderer/components/: ChatPanel.tsx  KnowledgeBaseView.tsx  MessageBubble.tsx  SettingsDrawer.tsx  SettingsPage.tsx  Sidebar.tsx  index.ts
frontend/src/renderer/services/: api.ts
frontend/src/renderer/stores/: conversationStore.ts  documentStore.ts  index.ts  knowledgeBaseStore.ts
frontend/src/renderer/styles/: global.css
frontend/src/renderer/types/: electron.d.ts
